fix(header): header z-index + scroll down position

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -9,5 +9,5 @@
   position: fixed;
   top: 0;
   background-color: $bg-color;
-  z-index: 0;
+  z-index: 1;
 }
